fix broken style

--- a/resources/sass/comments.scss
+++ b/resources/sass/comments.scss
@@ -225,16 +225,16 @@ section.reviews{
 
 
   #review-modal{
-    max-width: 768px;
     margin: 0 auto;
-    position: absolute;
     background: $transparent-black;
     border: 1px solid $gray-lighter;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 20;
+    position: fixed;
     left: 0;
-    bottom: 0;
+    top: 0;
+
     .overlay{
       width: 100%;
       height: 100%;
@@ -250,14 +250,29 @@ section.reviews{
       bottom: 0;
       left: 0;
       background-color: $white;
+      .medium-editor-placeholder-relative:after, .medium-editor-placeholder:after{
+        color: $gray;
+        font-style: normal;
+        font-weight: normal;
+        line-height: 2em;
+      }
+
       >input, #review-content{
         width: 100%;
         padding: 0.2em 0;
         border: solid #ddd;
         outline: none;
         border-width: 0 0 1px;
-        &:hover {
-          box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+        &:focus {
+          box-shadow: none;
+          border-bottom-color: $black;
+        }
+
+        &::placeholder{
+          color: $gray;
+          font-style: normal;
+          font-weight: normal;
+          line-height: 2em;
         }
       }
 
